# serializer version: 1
# name: test_setup[light.led_strip-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'flash',
        'strobe',
        'fade',
        'smooth',
        'red',
        'green',
        'blue',
        'white',
        'orange_red',
        'tomato',
        'light_green',
        'sky_blue',
        'cyan',
        'rebecca_purple',
        'orange',
        'turquoise',
        'purple',
        'yellow',
        'dark_cyan',
        'plum',
      ]),
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.led_strip',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tween_light_ir',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'led_strip',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.led_strip-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'color_mode': None,
      'effect': None,
      'effect_list': list([
        'flash',
        'strobe',
        'fade',
        'smooth',
        'red',
        'green',
        'blue',
        'white',
        'orange_red',
        'tomato',
        'light_green',
        'sky_blue',
        'cyan',
        'rebecca_purple',
        'orange',
        'turquoise',
        'purple',
        'yellow',
        'dark_cyan',
        'plum',
      ]),
      'friendly_name': 'LED Strip',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.led_strip',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
